set path to image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- <div class="mainWrapper"> -->
             <section id="hero">
                 <div id="heroItem">
-                    <img id="heroimage" src="../html/images/bottle.png" alt="">
+                    <img id="heroimage" src="html/images/bottle.png" alt="">
                     <p class="heroProductName one">BlueTale</p>
                     <p class="heroProductName two">BlueTale</p>
                     <p class="heroProductName three">BlueTale</p>
@@ -53,22 +53,22 @@
                 </div>
                 <div id="featureBox">
                     <div class="featureBundele">
-                        <img class="featureImg" src="../html/feature/safeMaterial.png" alt="img">
+                        <img class="featureImg" src="html/feature/safeMaterial.png" alt="img">
                         <h2 class="featureTitle">Safe Material</h2>
                         <p>Made with 100% BPA-free Tritan plastic <br>Keeps your water pure, fresh, and toxin-free.</p>
                     </div>
                     <div class="featureBundele">
-                        <img class="featureImg" src="../html/feature/smartDesignFtr.png" alt="img">
+                        <img class="featureImg" src="html/feature/smartDesignFtr.png" alt="img">
                         <h2 class="featureTitle">Smart Design</h2>
                         <p>Ergonomic shape for comfortable grip. <br>Leak-proof lid for on-the-go confidence.</p>
                     </div>
                     <div class="featureBundele">
-                        <img class="featureImg" src="../html/feature/ecoFriendlyPNG.png" alt="img">
+                        <img class="featureImg" src="html/feature/ecoFriendlyPNG.png" alt="img">
                         <h2 class="featureTitle">Eco-Friendly</h2>
                         <p>Fully reusable and sustainable. <br>A smarter choice for you, a cleaner choice for the planet.</p>
                     </div>
                     <div class="featureBundele">
-                        <img class="featureImg" src="../html/feature/builtToLast.png" alt="img">
+                        <img class="featureImg" src="html/feature/builtToLast.png" alt="img">
                         <h2 class="featureTitle">Built to last</h2>
                         <p>Shatter-resistant and long-lasting. <br>Designed to keep up with your lifestyle.</p>
                     </div>
@@ -78,42 +78,42 @@
                 <h2 id="imageTitle">Images</h2>
                 <div class="imageCorousel">
                     <div class="imageBox img1">
-                        <img class="imageStyle" src="../html/images/bottleEnvironment.png" alt="">
+                        <img class="imageStyle" src="html/images/bottleEnvironment.png" alt="">
                         <div class="imageTextBox">
                             <p class="imgParaTitle">Natural</p>
                             <p class="imgParaDesc">Nature friendly bottle</p>
                         </div>
                     </div>
                     <div class="imageBox img2">
-                        <img class="imageStyle " src="../html/images/bottleFamily.jpg" alt="">
+                        <img class="imageStyle " src="html/images/bottleFamily.jpg" alt="">
                         <div class="imageTextBox">
                             <p class="imgParaTitle">At home</p>
                             <p class="imgParaDesc">Use it at the dinner table</p>
                         </div>
                     </div>
                     <div class="imageBox img3">
-                        <img class="imageStyle " src="../html/images/bottleGym.png" alt="">
+                        <img class="imageStyle " src="html/images/bottleGym.png" alt="">
                         <div class="imageTextBox">
                             <p class="imgParaTitle">Workout</p>
                             <p class="imgParaDesc">Never give up</p>
                         </div>
                     </div>
                     <div class="imageBox img4">
-                        <img class="imageStyle " src="../html/images/bottleVirat.png" alt="">
+                        <img class="imageStyle " src="html/images/bottleVirat.png" alt="">
                         <div class="imageTextBox">
                             <p class="imgParaTitle">Virat Kohli</p>
                             <p class="imgParaDesc">Buy MRF Tyres</p>
                         </div>
                     </div> 
                     <div class="imageBox img5">
-                        <img class="imageStyle " src="../html/images/bottleHotel.jpg" alt="">
+                        <img class="imageStyle " src="html/images/bottleHotel.jpg" alt="">
                         <div class="imageTextBox">  
                             <p class="imgParaTitle">At Restaurant</p>
                             <p class="imgParaDesc">Don't trust their water</p>
                         </div>
                     </div> 
                     <div class="imageBox img6">
-                        <img class="imageStyle " src="../html/images/bottleStudy.jpg" alt="">
+                        <img class="imageStyle " src="html/images/bottleStudy.jpg" alt="">
                         <div class="imageTextBox">
                             <p class="imgParaTitle">Study</p>
                             <p class="imgParaDesc">Stay hydrated to keep brain cool</p>
@@ -126,20 +126,20 @@
                 <h2 id="ctaBoxHeading">Our product available at</h2>
                 <div id="retailWrapper">
                     <div id="retailAvailibilty">
-                        <img src="../html/retail/ready/amazonLogo.png" alt="" class="imgScroll item1">
-                        <img src="../html/retail/ready/bigbasketLogo.png" alt="" class="imgScroll item2">
-                        <img src="../html/retail/ready/bigBazaarLogo.png" alt="" class="imgScroll item3">
-                        <img src="../html/retail/ready/blinkItLogo.png" alt="" class="imgScroll item4">
-                        <img src="../html/retail/ready/costcoLogo.png" alt="" class="imgScroll item5">
-                        <img src="../html/retail/ready/dmartLogo.png" alt="" class="imgScroll item6">
-                        <img src="../html/retail/ready/easyDayLogo.png" alt="" class="imgScroll item7">
-                        <img src="../html/retail/ready/flipkartLogo.png" alt="" class="imgScroll item8">
-                        <img src="../html/retail/ready/moreLogo.png" alt="" class="imgScroll item9">
-                        <img src="../html/retail/ready/smartLogo.png" alt="" class="imgScroll item10">
-                        <img src="../html/retail/ready/starLogo.png" alt="" class="imgScroll item11">
-                        <img src="../html/retail/ready/swiggyLogo.png" alt="" class="imgScroll item12">
-                        <img src="../html/retail/ready/vishalLogo.png" alt="" class="imgScroll item13">
-                        <img src="../html/retail/ready/walmartLogo.png" alt="" class="imgScroll item14">
+                        <img src="html/retail/ready/amazonLogo.png" alt="" class="imgScroll item1">
+                        <img src="html/retail/ready/bigbasketLogo.png" alt="" class="imgScroll item2">
+                        <img src="html/retail/ready/bigBazaarLogo.png" alt="" class="imgScroll item3">
+                        <img src="html/retail/ready/blinkItLogo.png" alt="" class="imgScroll item4">
+                        <img src="html/retail/ready/costcoLogo.png" alt="" class="imgScroll item5">
+                        <img src="html/retail/ready/dmartLogo.png" alt="" class="imgScroll item6">
+                        <img src="html/retail/ready/easyDayLogo.png" alt="" class="imgScroll item7">
+                        <img src="html/retail/ready/flipkartLogo.png" alt="" class="imgScroll item8">
+                        <img src="html/retail/ready/moreLogo.png" alt="" class="imgScroll item9">
+                        <img src="html/retail/ready/smartLogo.png" alt="" class="imgScroll item10">
+                        <img src="html/retail/ready/starLogo.png" alt="" class="imgScroll item11">
+                        <img src="html/retail/ready/swiggyLogo.png" alt="" class="imgScroll item12">
+                        <img src="html/retail/ready/vishalLogo.png" alt="" class="imgScroll item13">
+                        <img src="html/retail/ready/walmartLogo.png" alt="" class="imgScroll item14">
                     </div>
                 </div>
                 <div id="textBox">
@@ -314,5 +314,5 @@
     </footer>
     
 </body>
-<script src="../js/index.js"></script>
+<script src="js/index.js"></script>
 </html>
